--- a/src/styles/seekbar.css
+++ b/src/styles/seekbar.css
@@ -56,7 +56,7 @@
 }
 .ui-video-seek-slider .track .main .connect {
     position: absolute;
-    background: linear-gradient(45deg, #2196f3 30%, #21cbf3 90%);
+    background: linear-gradient(45deg, #14dca0 30%, #1bbc8c 90%);
     width: 100%;
     height: 100%;
     z-index: 3;
